HDS-4900 `Stepper::Nav` Safari text alignment fix for interactive steps

--- a/packages/components/src/styles/components/stepper/nav.scss
+++ b/packages/components/src/styles/components/stepper/nav.scss
@@ -72,6 +72,7 @@ $progress-bar-animation-duration: 0.25s;
   position: relative;
   display: flex;
   flex-direction: column;
+  align-items: center;
   width: 100%;
   padding: 0;
   background-color: transparent;
